// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<HelpTooltip
  onShow={[Function]}
  overlay={
    <div
      className="abs-width-300"
    >
      <i
        className="spinner"
      />
    </div>
  }
/>
`;

exports[`should render 2`] = `
<HelpTooltip
  onShow={[Function]}
  overlay={
    <div
      className="abs-width-300"
    >
      <LazyLoader
        className="cut-margins"
        content="this is *bold* text"
        isTooltip={true}
      />
    </div>
  }
/>
`;
